<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarInformacion">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/IbRegresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/Txt_titulo_edit"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/perfilRL"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPerfil"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_img_perfil"
                android:scaleType="centerCrop" />
            
            <ImageView
                android:id="@+id/IvEditarimg"
                android:layout_width="50dp"
                android:layout_alignParentEnd="true"
                android:layout_height="50dp"
                android:src="@drawable/icono_editar"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILNombres"
                android:layout_below="@+id/perfilRL"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_nombres"
                    android:hint="@string/et_nombres"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Actualizar"
                android:layout_below="@id/TILNombres"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:text="@string/btn_actualizar"
                app:cornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
